completed exercise with fonts

--- a/fonts.html
+++ b/fonts.html
@@ -3,8 +3,35 @@
 <head>
 <title>Fonts! Fonts! Fonts</title>
 <meta charset="utf-8" />
+<link href='http://fonts.googleapis.com/css?family=Roboto+Slab' rel='stylesheet' type='text/css'>
 <style>
-
+#serif{
+  font-family:serif;
+}
+#sans{
+  font-family:sans-serif;
+}
+#monospace{
+  font-family:monospace;
+}
+#cursive{
+  font-family:cursive;
+}
+#fantasy{
+  font-family:fantasy;
+}
+#stackOne{
+  font-family:trebuchet ms, sans-serif;
+}
+#stackTwo{
+  font-family:rockwell, serif;
+}
+#stackThree{
+  font-family:Courier New, monospace;
+}
+body {
+  font-family: 'Roboto Slab', serif;
+}
 </style>
 </head>
 <body>
