font changes from examples

--- a/examples.html
+++ b/examples.html
@@ -3,8 +3,30 @@
 <head>
 <title>Font application exercises</title>
 <meta charset="utf-8" />
+<link href='http://fonts.googleapis.com/css?family=Indie+Flower' rel='stylesheet' type='text/css'>
+<link href='http://fonts.googleapis.com/css?family=Open+Sans+Condensed:300' rel='stylesheet' type='text/css'>
+<link href='http://fonts.googleapis.com/css?family=Fontdiner+Swanky' rel='stylesheet' type='text/css'>
+<link href='http://fonts.googleapis.com/css?family=Oranienbaum' rel='stylesheet' type='text/css'>
+<link href='http://fonts.googleapis.com/css?family=Playfair+Display+SC' rel='stylesheet' type='text/css'>
 <style>
-
+#hospital h2{
+  font-family:'Indie Flower', cursive;
+}
+#hospital p{
+  font-family:'Open Sans Condensed', sans-serif;
+}
+#iceCream h2{
+  font-family:'Fontdiner Swanky', cursive;
+}
+#iceCream p{
+  font-family:'Oranienbaum', serif;
+}
+#whiteHouse h2{
+  font-family:'Playfair Display SC', serif;
+}
+#whiteHouse p{
+  font-family:arial narrow; sans-serif;
+}
 </style>
 </head>
 <body>
